--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>I believe in maintaining a healthy work-life balance, 
                 and these activities help me recharge and approach challenges with a fresh perspective.</p>
             <div class="soc-med">
-                <a href="#"><i class="fa-brands fa-google"></i></a>
+<!--                 <a href="#"><i class="fa-brands fa-google"></i></a> -->
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
