--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="https://github.com/Hardin-J"><i class="fa-brands fa-github"></i></a>
             </div>
             
-            <a href="#" class="btn">Download CV</a>
+            <a href="Resume.pdf" class="btn">Download CV</a>
         </div>
         <div class="home-img">
             <img src="Images/pro.png" alt="profile-picture">
