--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 and these activities help me recharge and approach challenges with a fresh perspective.</p>
             <div class="soc-med">
 <!--                 <a href="#"><i class="fa-brands fa-google"></i></a> -->
-                <a href="https://www.instagram.com/w_h_i_t_e_d.e.v.i.l/"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/jeevarajan-r-40466422a/"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/Hardin-J"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/w_h_i_t_e_d.e.v.i.l/"><i class="fa-brands fa-instagram" target="_blank"></i></a>
+                <a href="https://www.linkedin.com/in/jeevarajan-r-40466422a/"><i class="fa-brands fa-linkedin" target="_blank"></i></a>
+                <a href="https://github.com/Hardin-J"><i class="fa-brands fa-github" target="_blank"></i></a>
             </div>
             
             <a href="Resume.pdf" class="btn">Download CV</a>
